[package]
name = "ybtop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
port_scanner = "0.1.5"
serde = "1.0.132"
serde_json = "1.0.73"
serde_derive = "1.0.132"
reqwest = { version = "0.11.8", features = ["blocking"] }


